# hitman-crash-inspector

./: Cargo.toml  README.md
src/: app.rs  crossterm.rs  g2_crash_metrics.rs  main.rs  nt_status_enum.rs  ui.rs  utils.rs
src/controls/: mod.rs  stateful_list.rs  stateful_tabs.rs
src/tabs/: callstack_tab.rs  exception_tab.rs  gameplay_tab.rs  gpu_tab.rs  mod.rs  module_tab.rs  settings_tab.rs  system_tab.rs  tab.rs  vr_tab.rs
