[package]
name = "hitman-crash-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
tui = "0.19.0"
crossterm = "0.26.1"
rand = "0.8.5"
argh = "0.1.10"
unicode-width = "0.1.10"
native-dialog = "0.6.3"
notify = "5.1.0"
anyhow = "1.0.70"
binrw = "0.11.1"
cgmath = "0.18.0"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.52", features = ["derive"] }

serde_json = "1.0.94"
